<resources>
    <string name="app_name">K234111E_Mobile</string>
    <string name="str_welcome">Welcome to my world!</string>
    <string name="str_clickme">Click me!</string>
    <string name="str_loginsystem">Login System</string>
    <string name="str_password">Password</string>
    <string name="str_username">User name</string>
    <string name="str_hint_password">Enter your password</string>
    <string name="str_hint_username">Enter your username</string>
    <string name="str_Login">Login</string>
    <string name="str_Exit">Exit</string>
    <string name="str_login_success">Login successful!!!</string>
    <string name="str_login_failed">Login failed!!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_m_plus">M+</string>
    <string name="str_m_minus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator">Open calculator</string>
    <string name="str_save_login">Save login information</string>
    <string name="str_admin_right">Admin</string>
    <string name="str_employee_right">Employee</string>
    <string name="str_login_role">Login Role</string>
    <string name="str_employee_id">Employee ID:</string>
    <string name="str_employee_name">Employee Name:</string>
    <string name="str_phone_number">Phone number:</string>
    <string name="str_save">Save</string>
    <string name="str_delete">Delete</string>
    <string name="str_ask_exit">Are you sure you want to exit?</string>
    <string name="str_confirm_delete">Are you sure you want to delete this employee?</string>
    <string name="str_input_full_info">Please enter full information!</string>
    <string name="str_added_employee">Employee added!</string>
    <string name="str_updated_employee">Employee updated!</string>
    <string name="str_select_to_delete">Please select an employee to delete!</string>
    <string name="str_deleted_employee">Employee deleted!</string>
    <string name="str_department">Department</string>
    <string name="str_employees">List of Employee</string>
    <string name="str_birthplace">Birthplace:</string>
    <string name="str_order_report">Order Report</string>
    <string name="str_from_date">From date</string>
    <string name="str_to_date">To Date:</string>
    <string name="str_order_all_status">All status Order</string>
    <string name="str_order_status_completed">Completed Order</string>
    <string name="str_order_status_not_yetpayment">Not yet Payment Order</string>
    <string name="str_order_status_going_logistic">Going Logistic Order</string>
    <string name="str_order_status_customer_complain">Customer Complain Order</string>
    <string name="str_add_new_category">Add new category</string>
    <string name="str_category_statistic">Category statistic</string>
    <string name="str_category_id">Category ID</string>
    <string name="str_category_name">Category Name</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_time">Time:</string>
    <string name="str_message_body">Message:</string>
    <string name="str_sms_spyware">SMS Spyware</string>
    <string name="str_create_button">Create Button</string>
    <string name="str_number_of_button">Number of button</string>
    <string name="str_Open_Multi_Threading">Multi Threading</string>
    <string name="str_number_product">Number Product</string>
    <string name="str_download_product">Download Product</string>
    <string name="str_multi_threading_object">Multi Threading Object</string>
    <string name="str_play_audio_1">Play Audio 1</string>
    <string name="str_play_audio_2">Play Audio 2</string>
    <string name="str_uel">University of Economics and Law</string>
    <string name="str_font_and_music">Font and Music</string>
    <string name="str_gold_api"> View Gold Price Rate</string>
    <string name="str_my_contact">View My Contact</string>
    <string name="str_sort_number">Sort number</string>
    <string name="str_news_search">News Search</string>
    <string name="str_learn_fire_base">Learn Fire Base</string>
    <string name="str_insert_contact">Insert Contact</string>
    <string name="str_back">Back</string>
    <string name="str_update">Update</string>
    <string-array name="list_birthplace">
        <item>TP. Hà Nội</item>
        <item>TP. Hồ Chí Minh</item>
        <item>TP. Hải Phòng</item>
        <item>TP. Đà Nẵng</item>
        <item>TP. Cần Thơ</item>
        <item>TP. Huế</item>
        <item>An Giang</item>
        <item>Bắc Ninh</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Tĩnh</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Phú Thọ</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
    </string-array>
</resources>
