<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderManagementActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_order_report"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:text="@string/str_from_date" />

            <TextView
                android:id="@+id/txtFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DAA5E4"
                android:text="01/01/2026" />

            <ImageView
                android:id="@+id/imgFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_calendar" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:text="@string/str_to_date" />

            <TextView
                android:id="@+id/txtToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DAA5E4"
                android:text="31/03/2026" />

            <ImageView
                android:id="@+id/imgToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_calendar" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imgFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_filter" />

    <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>