<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact Id:"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtContactId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="Contact Id here"
        android:inputType="text"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name:"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name here"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email here"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Phone:"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone here"
        android:inputType="phone"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:onClick="processBack"
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            android:text="@string/str_back"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

        <Button
            android:onClick="processUpdateContact"
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/str_update"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

        <Button
            android:onClick="processDeleteContact"
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:text="@string/str_delete"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>